[package]
name = "iid"
version = "0.1.0"
authors = [
    "Atlas Rhythm",
    "Raphaël Thériault <raphael_theriault@outlook.com>",
]
edition = "2018"
license = "Apache-2.0"
description = "Dead simple integer IDs"

[dependencies]
once_cell = "1"
parking_lot = { version = "0.10", optional = true }

[features]
default = []
pl = ["parking_lot", "once_cell/parking_lot"]

[dev-dependencies]
rayon = "1.3.0"
